
// Apply the java-library plugin to add support for Java Library
apply plugin: 'application'

dependencies {
   
    // Use JUnit test framework
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.12.2"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.12.2"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
      
    implementation 'org.apache.spark:spark-core_2.13:3.5.5'
    implementation 'org.apache.spark:spark-mllib_2.13:3.5.5'
}

application {
    applicationDefaultJvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
}

test {
    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

